--- a/src/Hospital_Chain_backend/Cargo.toml
+++ b/src/Hospital_Chain_backend/Cargo.toml
@@ -3,12 +3,15 @@ name = "Hospital_Chain_backend"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
 candid = "0.10"
-ic-cdk = "0.17"
-ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
+ic-cdk = "0.18" # Keep these versions in sync for compatibility
+ic-cdk-macros = "0.18" # Keep these versions in sync for compatibility
+ic-cdk-timers = "0.12" # Update this to a compatible version
+ic-stable-structures = "0.7.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_bytes = "0.11.17"
+sha2 = "0.10.9"
