--- a/src/Hospital_Chain_frontend/package.json
+++ b/src/Hospital_Chain_frontend/package.json
@@ -1,10 +1,15 @@
 {
+
   "dependencies": {
-    "@dfinity/agent": "^2.1.3",
-    "@dfinity/candid": "^2.1.3",
-    "@dfinity/principal": "^2.1.3",
+    "@dfinity/auth-client": "3.2.4",
+    "@dfinity/agent": "3.2.4",
+    "@dfinity/candid": "3.2.4",
+    "@dfinity/principal": "3.2.4",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,10 +17,13 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.21",
     "cross-fetch": "^3.1.6",
     "dotenv": "^16.3.1",
     "jsdom": "^22.1.0",
+    "postcss": "^8.5.6",
     "sass": "^1.63.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-environment": "^1.1.3",
