--- a/src/Hospital_Chain_frontend/package.json
+++ b/src/Hospital_Chain_frontend/package.json
@@ -1,44 +1,88 @@
 {
 
   "dependencies": {
-    "@dfinity/auth-client": "3.2.4",
+
     "@dfinity/agent": "3.2.4",
+
+    "@dfinity/auth-client": "3.2.4",
+
     "@dfinity/candid": "3.2.4",
+
     "@dfinity/principal": "3.2.4",
+
     "framer-motion": "^12.23.12",
+
     "lucide-react": "^0.544.0",
+
+    "pinata": "^2.5.0",
+
     "react": "^18.2.0",
+
     "react-dom": "^18.2.0",
+
     "react-router-dom": "^7.9.1"
+
   },
+
   "devDependencies": {
+
     "@testing-library/jest-dom": "^5.16.5",
+
     "@testing-library/react": "^14.0.0",
+
     "@types/react": "^18.2.14",
+
     "@types/react-dom": "^18.2.6",
+
     "@vitejs/plugin-react": "^4.0.1",
+
     "autoprefixer": "^10.4.21",
+
     "cross-fetch": "^3.1.6",
+
     "dotenv": "^16.3.1",
+
     "jsdom": "^22.1.0",
+
     "postcss": "^8.5.6",
+
     "sass": "^1.63.6",
+
     "tailwindcss": "^3.4.17",
+
     "typescript": "^5.1.3",
+
     "vite": "^4.3.9",
+
     "vite-plugin-environment": "^1.1.3",
+
     "vitest": "^2.0.5"
+
   },
+
   "name": "Hospital_Chain_frontend",
+
   "private": true,
+
   "scripts": {
+
     "build": "tsc && vite build",
+
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\"",
+
     "prebuild": "dfx generate",
+
     "setup": "npm i && dfx canister create Hospital_Chain_backend && dfx generate Hospital_Chain_backend && dfx deploy",
+
     "start": "vite --port 3000",
+
     "test": "vitest run"
+
   },
+
   "type": "module",
+
   "version": "0.0.0"
+
 }
+
