--- a/src/Hospital_Chain_backend/Cargo.toml
+++ b/src/Hospital_Chain_backend/Cargo.toml
@@ -14,4 +14,5 @@ ic-cdk-timers = "0.12" # Update this to a compatible version
 ic-stable-structures = "0.7.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_bytes = "0.11.17"
+serde_json = "1.0"
 sha2 = "0.10.9"
